✅ ADD: challenge 6 functions

--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "description": "LaunchSchool-JS100",
   "version": "1.0.0",
   "keywords": [],
-  "name": "LS-JS100",
+  "name": "lsjs100",
   "source": "src/index.html",
   "scripts": {},
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.6.0",
+    "eslint": "^8.7.0",
     "eslint-config-healthier": "^3.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-html": "^6.2.0",
     "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-unicorn": "^40.1.0",
     "healthier": "^4.0.0",
     "prettier": "2.5",
     "readline-sync": "^1.4.10",
